--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Home</title>
   </head>
   <body style="display:block;position:absolute;width:100vw;overflow-x:hidden;margin:0;box-sizing:border-box;background-color:black;">
-    <img src="bg.svg" style="width:100%;height:auto;">
+    <img src="bg.jpg" style="width:100%;height:auto;">
   </body>
 </html>
