--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
       }
       .video-container {
         position: relative;
-        width: 80%;
         padding-bottom: 56.25%; /* 16:9 aspect ratio */
         height: 0;
         margin: 0 auto;
       }
       .video-container iframe {
         position: absolute;
-        top: 0;
+        top: 60px;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 80%;
       }
       h1 {
         color: white;
@@ -37,7 +36,7 @@
   <body>
     <h1>Should AI be used to design and execute military strategies without human intervention?</h1>
     <div class="video-container">
-      <iframe src="https://www.youtube.com/embed/kWa3EvXcD-M" frameborder="0" allowfullscreen></iframe>
+      <iframe src="englishvideo.mp4" frameborder="0" allowfullscreen></iframe>
     </div>
     <img src="bg.jpg" style="width:100%;height:auto;">
   </body>
