--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <h1>Should AI be used to design and execute military strategies without human intervention?</h1>
     <div class="video-container">
-      <iframe src="englishvideo.mp4" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/kWa3EvXcD-M" frameborder="0" allowfullscreen></iframe>
     </div>
     <img src="bg.jpg" style="width:100%;height:auto;">
   </body>
