--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Home</title>
   </head>
-  <body>
-    <h1>https://content-verse.framer.website</h1>
+   <body style="display: flex;width:100vw;height:100vh;">
+    <h1 style="margin:auto;">hey buddy, here is our website: https://content-verse.framer.website</h1>
   </body>
 </html>
