--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Home</title>
   </head>
    <body style="display: flex;width:100vw;height:100vh;">
-    <h1 style="margin:auto;">hey buddy, here is our website: https://content-verse.framer.website</h1>
+    <h1 style="margin:auto;">hey buddy, here is our website: <a href"https://content-verse.framer.website">https://content-verse.framer.website</a></h1>
   </body>
 </html>
